--- a/clicker.html
+++ b/clicker.html
@@ -3,48 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>Simple Clicker</title>
-  <link rel="stylesheet" href="SCSSClickera.scss">
+  <link rel="stylesheet" href="scss.scss">
 </head>
 <body>
 
-  <div class="game-container">
-
-    <h1 class="title">🔥 CLICKER GAME 🔥</h1>
-
-    <div class="points-box">
-      <p class="points-label">Punkty</p>
-      <p class="points-value">0</p>
-    </div>
-
-    <button class="click-button">
-      KLIKNIJ
-    </button>
-
-    <div class="upgrades">
-      <h2>Ulepszenia</h2>
-
-      <div class="upgrade">
-        <span>+1 punkt / klik</span>
-        <button disabled>100 pkt</button>
-      </div>
-
-      <div class="upgrade">
-        <span>Auto-clicker</span>
-        <button disabled>250 pkt</button>
-      </div>
-
-      <div class="upgrade">
-        <span>Mnożnik x2</span>
-        <button disabled>500 pkt</button>
-      </div>
-    </div>
-
-    <footer>
-      <p>Wersja demo – logika zostanie dodana</p>
-    </footer>
-nigger wait
-
-  </div>
 
 </body>
 </html>
