--- a/clicker.html
+++ b/clicker.html
@@ -9,7 +9,7 @@
 nic
 dswfgsgasrgw4egedsfgfbhydsvb sdiok
 ']g
- dswfgsgasrgw4egedsfgfbhydsvb dswfgsgasrgw4egedsfgfbhydsvbdf
+ dswfgsgasrgwcokoolwiek
   gd
   g s
   ds 
