--- a/clicker.html
+++ b/clicker.html
@@ -5,21 +5,8 @@
   <title>Simple Clicker</title>
   <link rel="stylesheet" href="scss.scss">
 </head>
-<body>
-nic
-dswfgsgasrgw4egedsfgfbhydsvb sdiok
-']g
- dswfgsgasrgwcokoolwiek
-  gd
-  g s
-  ds 
-  sgrh
-   <fieldset>h 
-    rsfh 
-    <dfn>ehrdrh
-       e
-    </dfn>
-   </fieldset>
+<body>dsgd gdg sdg  dgsgfg rffdghsdf df
+
 </body>
 </html>
   
