--- a/clicker.html
+++ b/clicker.html
@@ -5,7 +5,7 @@
   <title>Simple Clicker</title>
   <link rel="stylesheet" href="scss.scss">
 </head>
-<body>dsgd gdg sdg  dgsgfg rffdghsdf df
+<body>niger niger niger niger niger
 
 </body>
 </html>
