--- a/clicker.html
+++ b/clicker.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Simple Clicker</title>
+  <title> Clicker</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
