--- a/clicker.html
+++ b/clicker.html
@@ -22,9 +22,11 @@
       <span id="points">0</span>
     </div>
     <img src="kasa.png" alt="Click me" id="clickImage" class="click-image">
+    <div class="per-second">Na sekundę: <span id="perSecond">0</span></div>
     <div class="upgrades">
       <h2>Ulepszenia</h2>
       <div class="upgrade">
+        <div id="upgradesContainer"></div>
         <span>+1 punkt / klik</span>
         <button id="upgradeClick" data-cost="50">50 pkt</button>
       </div>
