--- a/clicker.html
+++ b/clicker.html
@@ -39,6 +39,8 @@
 <script src="js/upgrades.js"></script>
 <script src="js/render.js"></script>
 <script src="js/tabs.js"></script>
+<script src="js/storage.js"></script>
 <script src="js/main.js"></script>
+
 </body>
 </html>
