--- a/clicker.html
+++ b/clicker.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ss<!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
@@ -38,9 +38,10 @@
 <script src="js/state.js"></script>
 <script src="js/upgrades.js"></script>
 <script src="js/render.js"></script>
-<script src="js/tabs.js"></script>
+<script src="js/storage.js"></script>
 <script src="js/main.js"></script>
-</body>
+<script src="js/tabs.js"></script>
+
 </html>
 
 
