--- a/clicker.html
+++ b/clicker.html
@@ -1,4 +1,4 @@
-ss<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
@@ -7,33 +7,52 @@ ss<!DOCTYPE html>
 </head>
 <body>
 
+<!-- === NAVBAR === -->
 <nav class="nav">
-  <button class="nav__btn nav__btn--active" data-tab="game" href="#maslo">Gra</button>
-  <button class="nav__btn" data-tab="upgrades" href="#sól">Ulepszenia</button>
-  <button class="nav__btn" data-tab="stats"href="#pomidor">Statystyki</button>
-</nav>
 
-<section class="tab tab--active game" id="game">
-  <h1 class="game__title"><a id="maslo">🔥 CLICKER GAME 🔥</a></h1>
-
-  <div class="game__stats">
-    <div>Punkty: <span id="points">0</span></div>
-    <div>Na sekundę: <span id="perSecond">0</span></div>
+  <div class="nav__tabs">
+    <button class="nav__btn nav__btn--active" data-tab="game">Gra</button>
+    <button class="nav__btn" data-tab="upgrades">Ulepszenia</button>
+    <button class="nav__btn" data-tab="stats">Statystyki</button>
   </div>
 
-  <img src="images/kasa.png" id="clickImage" class="game__clicker">
-</section>
+  <!-- LICZNIK PUNKTÓW -->
+  <div class="nav-points">
+    <div class="nav-points__label">Punkty</div>
+    <div class="nav-points__value" id="points">0</div>
+  </div>
+
+</nav>
+
+<!-- === APP === -->
+<main class="app">
+
+  <!-- GRA -->
+  <section class="tab tab--active game" id="game">
+    <h1 class="game__title">🔥 CLICKER GAME 🔥</h1>
+
+    <div class="game__stats">
+      <div>Na sekundę: <span id="perSecond">0</span></div>
+    </div>
+
+    <img src="images/kasa.png" id="clickImage" class="game__clicker">
+  </section>
 
 <section class="tab upgrades" id="upgrades">
-  <h1><a id="sól"🛒 >Ulepszenia</a></h1>
-  <div id="upgradesContainer"></div>
+  <div class="upgrades__wrapper">
+    <h2 class="upgrades__section">Ulepszenia kliknięcia</h2>
+    <div id="upgradesContainer" class="upgrades__list"></div>
+  </div>
 </section>
 
-<section class="tab stats" id="stats">
-  <p><a id="pomidor">Kliknięcia: <span id="clickCount">0</span></a></p>
-  <p>Ulepszenia: <span id="upgradeCount">0</span></p>
-  <p>Punkty łącznie: <span id="totalPoints">0</span></p>
-</section>
+  <!-- STATYSTYKI -->
+  <section class="tab stats" id="stats">
+    <p>Kliknięcia: <span id="clickCount">0</span></p>
+    <p>Ulepszenia: <span id="upgradeCount">0</span></p>
+    <p>Punkty łącznie: <span id="totalPoints">0</span></p>
+  </section>
+
+</main>
 
 <script src="js/state.js"></script>
 <script src="js/upgrades.js"></script>
@@ -42,4 +61,5 @@ ss<!DOCTYPE html>
 <script src="js/main.js"></script>
 <script src="js/tabs.js"></script>
 
+</body>
 </html>
