--- a/clicker.html
+++ b/clicker.html
@@ -14,9 +14,9 @@
     <button class="nav__btn nav__btn--active" data-tab="game">Gra</button>
     <button class="nav__btn" data-tab="upgrades">Ulepszenia</button>
     <button class="nav__btn" data-tab="stats">Statystyki</button>
+    <button class="nav__btn" data-tab="skins">Skins</button>
   </div>
 
-  
   <div class="nav-points">
     <div class="nav-points__label">Punkty</div>
     <div class="nav-points__value" id="points">0</div>
@@ -24,10 +24,9 @@
 
 </nav>
 
-
 <main class="app">
 
-
+ 
   <section class="tab tab--active game" id="game">
     <h1 class="game__title">🔥 CLICKER GAME 🔥</h1>
 
@@ -35,26 +34,56 @@
       <div>Na sekundę: <span id="perSecond">0</span></div>
     </div>
 
-    <img src="images/kasa.png" id="clickImage" class="game__clicker">
+    <img id="clickImage" class="game__clicker" alt="Kliknij">
   </section>
 
-<section class="tab upgrades" id="upgrades">
-  <div class="upgrades__wrapper">
-    <h2 class="upgrades__section">Ulepszenia kliknięcia</h2>
-    <div id="upgradesContainer" class="upgrades__list"></div>
-  </div>
-</section>
-
   
+  <section class="tab upgrades" id="upgrades">
+    <div class="upgrades__wrapper">
+      <h2 class="upgrades__section">Ulepszenia kliknięcia</h2>
+      <div id="upgradesContainer" class="upgrades__list"></div>
+    </div>
+  </section>
+
+ 
   <section class="tab stats" id="stats">
-    <p>Kliknięcia: <span id="clickCount">0</span></p>
-    <p>Ulepszenia: <span id="upgradeCount">0</span></p>
-    <p>Punkty łącznie: <span id="totalPoints">0</span></p>
+
+    <h1 class="stats__title">📊 Statystyki</h1>
+
+    <div class="stats__grid">
+      <div class="stats__card">
+        <div class="stats__label">Kliknięcia</div>
+        <div class="stats__value" id="clickCount">0</div>
+      </div>
+
+      <div class="stats__card">
+        <div class="stats__label">Kupione ulepszenia</div>
+        <div class="stats__value" id="upgradeCount">0</div>
+      </div>
+
+      <div class="stats__card">
+        <div class="stats__label">Łącznie punktów</div>
+        <div class="stats__value" id="totalPoints">0</div>
+      </div>
+
+      <div class="stats__card">
+        <div class="stats__label">Punkty na sekundę</div>
+        <div class="stats__value" id="perSecond">0</div>
+      </div>
+    </div>
+
+  </section>
+
+ 
+  <section class="tab skins" id="skins">
+    <h1 class="skins__title">🎨 Sklep skinów</h1>
+    <div id="skinsContainer" class="skins__grid"></div>
   </section>
 
 </main>
 
 <script src="js/state.js"></script>
+<script src="js/skins.js"></script>
 <script src="js/upgrades.js"></script>
 <script src="js/render.js"></script>
 <script src="js/storage.js"></script>
@@ -63,4 +92,3 @@
 
 </body>
 </html>
-
