dodanie licznika.html

--- a/clicker.html
+++ b/clicker.html
@@ -31,8 +31,10 @@
     <h1 class="game__title">🔥 CLICKER GAME 🔥</h1>
 
     <div class="game__stats">
-      <div>Na sekundę: <span id="perSecond">0</span></div>
-    </div>
+  <div>Punkty: <span id="pointsGame">0</span></div>
+  <div>Na sekundę: <span id="perSecond">0</span></div>
+</div>
+
 
     <img id="clickImage" class="game__clicker" alt="Kliknij">
   </section>
