--- a/clicker.html
+++ b/clicker.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 
-
 <nav class="nav">
 
   <div class="nav__tabs">
@@ -26,20 +25,17 @@
 
 <main class="app">
 
- 
   <section class="tab tab--active game" id="game">
     <h1 class="game__title">🔥 CLICKER GAME 🔥</h1>
 
     <div class="game__stats">
-  <div>Punkty: <span id="pointsGame">0</span></div>
-  <div>Na sekundę: <span id="perSecond">0</span></div>
-</div>
-
+      <div>Punkty: <span id="pointsGame">0</span></div>
+      <div>Na sekundę: <span id="perSecondGame">0</span></div>
+    </div>
 
     <img id="clickImage" class="game__clicker" alt="Kliknij">
   </section>
 
-  
   <section class="tab upgrades" id="upgrades">
     <div class="upgrades__wrapper">
       <h2 class="upgrades__section">Ulepszenia kliknięcia</h2>
@@ -47,7 +43,6 @@
     </div>
   </section>
 
- 
   <section class="tab stats" id="stats">
 
     <h1 class="stats__title">📊 Statystyki</h1>
@@ -70,13 +65,12 @@
 
       <div class="stats__card">
         <div class="stats__label">Punkty na sekundę</div>
-        <div class="stats__value" id="perSecond">0</div>
+        <div class="stats__value" id="perSecondStats">0</div>
       </div>
     </div>
 
   </section>
 
- 
   <section class="tab skins" id="skins">
     <h1 class="skins__title">🎨 Sklep skinów</h1>
     <div id="skinsContainer" class="skins__grid"></div>
