--- a/clicker.html
+++ b/clicker.html
@@ -14,6 +14,7 @@
     <button class="nav__btn" data-tab="upgrades">Ulepszenia</button>
     <button class="nav__btn" data-tab="stats">Statystyki</button>
     <button class="nav__btn" data-tab="skins">Skins</button>
+    <button class="nav__btn" data-tab="cursor">Kursor</button>
   </div>
 
   <div class="nav-points">
@@ -76,15 +77,22 @@
     <div id="skinsContainer" class="skins__grid"></div>
   </section>
 
+  <section class="tab cursor" id="cursor">
+    <h1 class="skins__title">🖱️ Sklep kursorów</h1>
+    <div id="cursorSkinsContainer" class="skins__grid"></div>
+  </section>
+
 </main>
 
 <script src="js/state.js"></script>
 <script src="js/skins.js"></script>
 <script src="js/upgrades.js"></script>
+<script src="js/cursorSkins.js"></script>
 <script src="js/render.js"></script>
 <script src="js/storage.js"></script>
 <script src="js/main.js"></script>
 <script src="js/tabs.js"></script>
+
 
 </body>
 </html>
