--- a/clicker.html
+++ b/clicker.html
@@ -15,6 +15,9 @@
     <button class="nav__btn" data-tab="stats">Statystyki</button>
     <button class="nav__btn" data-tab="skins">Skins</button>
   </div>
+<button id="resetGameBtn" class="reset-btn">
+  🔄 Reset gry (TEST)
+</button>
 
   <div class="nav-points">
     <div class="nav-points__label">Punkty</div>
