--- a/clicker.html
+++ b/clicker.html
@@ -18,6 +18,11 @@
 <button id="resetGameBtn" class="reset-btn">
   🔄 Reset gry (TEST)
 </button>
+<button onclick="addTestResources()" style="margin-top:20px;">
+  🧪 TEST: +1 000 000 EXP & COINS
+</button>
+
+
 
   <div class="nav-points">
     <div class="nav-points__label">Punkty</div>
