Usuniecie przycisku testowego

--- a/clicker.html
+++ b/clicker.html
@@ -15,14 +15,13 @@
     <button class="nav__btn" data-tab="stats">Statystyki</button>
     <button class="nav__btn" data-tab="skins">Skins</button>
   </div>
-<button id="resetGameBtn" class="reset-btn">
-  🔄 Reset gry (TEST)
-</button>
-<button onclick="addTestResources()" style="margin-top:20px;">
-  🧪 TEST: +1 000 000 EXP & COINS
-</button>
 
-
+  <!-- 🔥 PRZYCISK RESETU – PRZENIESIONY W PRAWO -->
+  <div class="nav__actions">
+    <button id="resetGameBtn" class="reset-btn">
+      🔄 Reset gry (TEST)
+    </button>
+  </div>
 
   <div class="nav-points">
     <div class="nav-points__label">Punkty</div>
