za palarnie dla vitaliego

--- a/clicker.html
+++ b/clicker.html
@@ -21,6 +21,12 @@
     <button id="resetGameBtn" class="reset-btn">
       🔄 Reset gry (TEST)
     </button>
+  
+  <button id="addExpBtn" class="reset-btn">
+    🧪 +1 000 000 EXP
+  </button>
+</div>
+
   </div>
 
   <div class="nav-points">
