--- a/clicker.html
+++ b/clicker.html
@@ -8,36 +8,30 @@
 <body>
 
 <nav class="nav">
-
   <div class="nav__tabs">
     <button class="nav__btn nav__btn--active" data-tab="game">Gra</button>
     <button class="nav__btn" data-tab="upgrades">Ulepszenia</button>
     <button class="nav__btn" data-tab="stats">Statystyki</button>
     <button class="nav__btn" data-tab="skins">Skins</button>
     <button class="nav__btn" data-tab="rebirth">Rebirth</button>
+    <button class="nav__btn" data-tab="casino">Kasyno</button>
   </div>
 
   <div class="nav__actions">
-    <button id="resetGameBtn" class="reset-btn">
-      🔄 Reset gry (TEST)
-    </button>
-
-    <button id="addExpBtn" class="reset-btn">
-      🧪 +1 000 000 EXP
-    </button>
+    <button id="resetGameBtn" class="reset-btn">🔄 Reset gry (TEST)</button>
+    <button id="addExpBtn" class="reset-btn">🧪 +1 000 000 EXP</button>
   </div>
 
   <div class="nav-points">
     <div class="nav-points__label">Punkty</div>
     <div class="nav-points__value" id="points">0</div>
   </div>
-
 </nav>
 
 <main class="app">
 
-
-  <section class="tab tab--active game" id="game">
+<section class="tab tab--active game" id="game">
+  <div class="tab__inner tab__inner--center">
     <h1 class="game__title">🔥 CLICKER GAME 🔥</h1>
 
     <div class="game__stats">
@@ -46,87 +40,158 @@
     </div>
 
     <img id="clickImage" class="game__clicker" alt="Kliknij">
-  </section>
+  </div>
+</section>
 
-
-  <section class="tab upgrades" id="upgrades">
-    <div class="upgrades__wrapper">
-      <h2 class="upgrades__section">Ulepszenia kliknięcia</h2>
-      <div id="upgradesContainer" class="upgrades__list"></div>
-    </div>
-  </section>
-
-
-  <section class="tab stats" id="stats">
-    <h1 class="stats__title">📊 Statystyki</h1>
-
-    <div class="stats__grid">
-      <div class="stats__card">
-        <div class="stats__label">Kliknięcia</div>
-        <div class="stats__value" id="clickCount">0</div>
-      </div>
-
-      <div class="stats__card">
-        <div class="stats__label">Kupione ulepszenia</div>
-        <div class="stats__value" id="upgradeCount">0</div>
-      </div>
-
-      <div class="stats__card">
-        <div class="stats__label">Łącznie punktów</div>
-        <div class="stats__value" id="totalPoints">0</div>
-      </div>
-
-      <div class="stats__card">
-        <div class="stats__label">Punkty na sekundę</div>
-        <div class="stats__value" id="perSecondStats">0</div>
-      </div>
-
-      <div class="stats__card">
-        <div class="stats__label">Poziom</div>
-        <div class="stats__value" id="level">1</div>
-      </div>
-
-      <div class="stats__card">
-        <div class="stats__label">XP</div>
-        <div class="stats__value" id="xp">0 / 100</div>
-      </div>
-
-      <div class="stats__card">
-        <div class="stats__label">Rebirthy</div>
-        <div class="stats__value" id="rebirthStats">0</div>
-      </div>
-
-      <div class="stats__card">
-        <div class="stats__label">Mnożnik Rebirth</div>
-        <div class="stats__value" id="rebirthBonusStats">x1.00</div>
+<section class="tab upgrades" id="upgrades">
+  <div class="tab__inner">
+    <div class="tab__content">
+      <div class="upgrades__wrapper">
+        <h2 class="upgrades__section">Ulepszenia kliknięcia</h2>
+        <div id="upgradesContainer" class="upgrades__list"></div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
- 
-  <section class="tab skins" id="skins">
-    <h1 class="skins__title">🎨 Sklep skinów</h1>
-    <div id="skinsContainer" class="skins__grid"></div>
-  </section>
+<section class="tab stats" id="stats">
+  <div class="tab__inner">
+    <div class="tab__content">
+      <h1 class="stats__title">📊 Statystyki</h1>
 
-  
-  <section class="tab rebirth" id="rebirth">
-  <h1 class="rebirth__title">🔥 Rebirth 🔥</h1>
+      <div class="stats__grid">
+        <div class="stats__card">
+          <div class="stats__label">Kliknięcia</div>
+          <div class="stats__value" id="clickCount">0</div>
+        </div>
 
-  <div class="rebirth__content">
+        <div class="stats__card">
+          <div class="stats__label">Kupione ulepszenia</div>
+          <div class="stats__value" id="upgradeCount">0</div>
+        </div>
 
-    <p class="rebirth__cost">
-      Koszt: <strong id="rebirthCost">100 mln</strong> punktów
-    </p>
+        <div class="stats__card">
+          <div class="stats__label">Łącznie punktów</div>
+          <div class="stats__value" id="totalPoints">0</div>
+        </div>
 
-    <p class="rebirth__info">
-      Rebirthy: <strong id="rebirthCount">0</strong><br>
-      Bonus: <strong id="rebirthBonus">x1.00</strong>
-    </p>
+        <div class="stats__card">
+          <div class="stats__label">Punkty na sekundę</div>
+          <div class="stats__value" id="perSecondStats">0</div>
+        </div>
 
-    <button id="rebirthBtn" class="rebirth__button">
-      ♻️ REBIRTH
-    </button>
+        <div class="stats__card">
+          <div class="stats__label">Poziom</div>
+          <div class="stats__value" id="level">1</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">XP</div>
+          <div class="stats__value" id="xp">0 / 100</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Rebirthy</div>
+          <div class="stats__value" id="rebirthStats">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Mnożnik Rebirth</div>
+          <div class="stats__value" id="rebirthBonusStats">x1.00</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="tab skins" id="skins">
+  <div class="tab__inner">
+    <div class="tab__content">
+      <h1 class="skins__title">🎨 Sklep skinów</h1>
+      <div id="skinsContainer" class="skins__grid"></div>
+    </div>
+  </div>
+</section>
+
+<section class="tab rebirth" id="rebirth">
+  <div class="tab__inner">
+    <div class="tab__content">
+      <h1 class="rebirth__title">🔥 Rebirth 🔥</h1>
+
+      <div class="rebirth__content">
+        <p class="rebirth__cost">
+          Koszt: <strong id="rebirthCost">100 mln</strong> punktów
+        </p>
+
+        <p class="rebirth__info">
+          Rebirthy: <strong id="rebirthCount">0</strong><br>
+          Bonus: <strong id="rebirthBonus">x1.00</strong>
+        </p>
+
+        <button id="rebirthBtn" class="rebirth__button">
+          ♻️ REBIRTH
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="tab casino" id="casino">
+  <div class="tab__inner tab__inner--center">
+    <div class="casino__content">
+      <h1 class="casino__title">🔥 KASYNO 🔥</h1>
+
+      <button class="casino-btn" data-tab="casino-coinflip">
+        🎲 Rzut Monetą
+      </button>
+
+      <button class="casino-btn" data-tab="casino-slots">
+        🎰 Jednoręki Bandzior
+      </button>
+    </div>
+  </div>
+</section>
+<section class="tab casino-coinflip" id="casino-coinflip">
+  <div class="tab__inner tab__inner--center">
+
+    <h1 class="casino__title">🎲 Rzut Monetą</h1>
+
+    <div class="coinflip">
+
+     <div class="coinflip__coin" id="coin">
+  <div class="coin coin--front">🦅</div>
+  <div class="coin coin--back">🪙</div>
+</div>
+
+
+      <div class="coinflip__controls">
+        <input
+          type="number"
+          id="coinflipBet"
+          class="coinflip__input"
+          placeholder="Stawka"
+          min="1"
+        />
+
+        <div class="coinflip__choices">
+          <button class="coinflip__btn" data-choice="orzel">Orzeł</button>
+          <button class="coinflip__btn" data-choice="reszka">Reszka</button>
+        </div>
+
+        <button id="coinflipPlay" class="coinflip__play">
+          RZUĆ MONETĄ
+        </button>
+      </div>
+
+    <div class="coinflip__result" id="coinflipResult"></div>
+
+
+
+      <button class="casino-btn" data-tab="casino">
+        ← Wróć do Kasyna
+      </button>
+
+    </div>
 
   </div>
 </section>
@@ -140,6 +205,7 @@
 <script src="js/render.js"></script>
 <script src="js/storage.js"></script>
 <script src="js/main.js"></script>
+<script src="js/casino.js"></script>
 <script src="js/tabs.js"></script>
 
 </body>
