--- a/clicker.html
+++ b/clicker.html
@@ -220,7 +220,9 @@
       <button id="slotPlay" class="casino-btn">
         ZAKRĘĆ 🎰
       </button>
-
+      <button id="autoSpinBtn" class="casino-btn">
+       Auto-spin
+      </button>
       <div id="slotResult" class="slot__result"></div>
 
       <button class="casino-btn" data-tab="casino">
