dodanie dzwiekow i animacji coinflipa

--- a/clicker.html
+++ b/clicker.html
@@ -151,19 +151,18 @@
     </div>
   </div>
 </section>
+
 <section class="tab casino-coinflip" id="casino-coinflip">
-  
   <div class="tab__inner tab__inner--center">
 
     <h1 class="casino__title">🎲 Rzut Monetą</h1>
 
     <div class="coinflip">
 
-     <div class="coinflip__coin" id="coin">
-  <div class="coin coin--front">🦅</div>
-  <div class="coin coin--back">🪙</div>
-</div>
-
+      <div class="coinflip__coin" id="coin">
+        <img class="coin coin--front" src="images/reszka.png">
+        <img class="coin coin--back" src="images/orzeł.png">
+      </div>
 
       <div class="coinflip__controls">
         <input
@@ -184,9 +183,7 @@
         </button>
       </div>
 
-    <div class="coinflip__result" id="coinflipResult"></div>
-
-
+      <div class="coinflip__result" id="coinflipResult"></div>
 
       <button class="casino-btn" data-tab="casino">
         ← Wróć do Kasyna
@@ -196,6 +193,7 @@
 
   </div>
 </section>
+
 <section class="tab casino-slots" id="casino-slots">
   <div class="tab__inner tab__inner--center">
 
