--- a/clicker.html
+++ b/clicker.html
@@ -160,8 +160,8 @@
     <div class="coinflip">
 
       <div class="coinflip__coin" id="coin">
-        <img class="coin coin--front" src="images/reszka.png">
-        <img class="coin coin--back" src="images/orzeł.png">
+        <img class="coin coin--front" src="images/orzeł.png">
+        <img class="coin coin--back" src="images/reszka.png">
       </div>
 
       <div class="coinflip__controls">
