dodanie brakujacych dzwiekow, ulepszenia wygladowe slotow, naprawa drobnych bledow

--- a/clicker.html
+++ b/clicker.html
@@ -207,13 +207,15 @@
         <div class="slot__reel" id="slotReel3">🔔</div>
       </div>
 
-      <input
-        type="number"
-        id="slotBet"
-        class="slot__input"
-        placeholder="Stawka"
-        min="1"
-      >
+<input
+  type="number"
+  id="slotBet"
+  class="slot__input coinflip__input"
+  placeholder="Stawka"
+  min="1"
+/>
+
+
 
       <button id="slotPlay" class="casino-btn">
         ZAKRĘĆ 🎰
