--- a/clicker.html
+++ b/clicker.html
@@ -59,14 +59,77 @@
     <div class="tab__content">
       <h1 class="stats__title">📊 Statystyki</h1>
       <div class="stats__grid">
-        <div class="stats__card"><div class="stats__label">Kliknięcia</div><div class="stats__value" id="clickCount">0</div></div>
-        <div class="stats__card"><div class="stats__label">Kupione ulepszenia</div><div class="stats__value" id="upgradeCount">0</div></div>
-        <div class="stats__card"><div class="stats__label">Łącznie punktów</div><div class="stats__value" id="totalPoints">0</div></div>
-        <div class="stats__card"><div class="stats__label">Punkty na sekundę</div><div class="stats__value" id="perSecondStats">0</div></div>
-        <div class="stats__card"><div class="stats__label">Poziom</div><div class="stats__value" id="level">1</div></div>
-        <div class="stats__card"><div class="stats__label">XP</div><div class="stats__value" id="xp">0 / 100</div></div>
-        <div class="stats__card"><div class="stats__label">Rebirthy</div><div class="stats__value" id="rebirthStats">0</div></div>
-        <div class="stats__card"><div class="stats__label">Mnożnik Rebirth</div><div class="stats__value" id="rebirthBonusStats">x1.00</div></div>
+
+        <div class="stats__card">
+          <div class="stats__label">Kliknięcia</div>
+          <div class="stats__value" id="clickCount">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Kupione ulepszenia</div>
+          <div class="stats__value" id="upgradeCount">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Łącznie punktów</div>
+          <div class="stats__value" id="totalPoints">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Punkty / s</div>
+          <div class="stats__value" id="perSecondStats">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Poziom</div>
+          <div class="stats__value" id="level">1</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">XP</div>
+          <div class="stats__value" id="xp">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Rebirthy</div>
+          <div class="stats__value" id="rebirthStats">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Bonus Rebirth</div>
+          <div class="stats__value" id="rebirthBonusStats">x1.00</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Posiadane skiny</div>
+          <div class="stats__value" id="skinsOwned">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Wygrane w kasynie</div>
+          <div class="stats__value" id="casinoWins">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Przegrane w kasynie</div>
+          <div class="stats__value" id="casinoLosses">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Wygrana kasa</div>
+          <div class="stats__value" id="casinoMoneyWon">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">Przegrana kasa</div>
+          <div class="stats__value" id="casinoMoneyLost">0</div>
+        </div>
+
+        <div class="stats__card">
+          <div class="stats__label">MEGA BIG WIN</div>
+          <div class="stats__value" id="slotMegaWins">0</div>
+        </div>
+
       </div>
     </div>
   </div>
@@ -86,8 +149,13 @@
     <div class="tab__content">
       <h1 class="rebirth__title">🔥 Rebirth 🔥</h1>
       <div class="rebirth__content">
-        <p class="rebirth__cost">Koszt: <strong id="rebirthCost">100 mln</strong> punktów</p>
-        <p class="rebirth__info">Rebirthy: <strong id="rebirthCount">0</strong><br>Bonus: <strong id="rebirthBonus">x1.00</strong></p>
+        <p class="rebirth__cost">
+          Koszt: <strong id="rebirthCost">100 mln</strong> punktów
+        </p>
+        <p class="rebirth__info">
+          Rebirthy: <strong id="rebirthCount">0</strong><br>
+          Bonus: <strong id="rebirthBonus">x1.00</strong>
+        </p>
         <button id="rebirthBtn" class="rebirth__button">♻️ REBIRTH</button>
       </div>
     </div>
@@ -131,7 +199,7 @@
 
     <h1 class="casino__title">🎰 Jednoręki bandzior</h1>
 
-   <div class="slot slot-machine">
+    <div class="slot slot-machine">
       <div class="slot__reels">
         <div class="slot__reel"><img id="slotReel1" src="images/slots/cherry.png"></div>
         <div class="slot__reel"><img id="slotReel2" src="images/slots/lemon.png"></div>
